# qrisklab

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: graph.ipynb  vol_models.ipynb
examples/amm/: README.md  lp_put_hedge_backtest.py  mc_simulation_demo.py  test_amm_lp_valuation.py
examples/crypto/: pricing_alignment.ipynb
qrisklab/: simulation_engine.py  stress_engine.py  utils.py
qrisklab/clients/: __init__.py  graph.py  graph_query.py  market_data.py
qrisklab/core/: amm_backtest.py  amm_calc.py  amm_mc_simulation.py  amm_scenarios.py  amm_valuation.py  black_scholes.py  path_simulation.py  stress_tests.py  univ3_valuation.py
qrisklab/core/vol_models/: wing_model.py
research/amm/: hedge_report.py  lp_greeks.ipynb  lp_range_analysis.py  uniswap_report.py  univ3_greeks.ipynb
research/amm/backtest/: README.md  lp_put_hedge_backtest.py  mc_simulation_demo.py
research/amm/univ3/: graph.ipynb  uniswap_v3_active_liquidity.py
research/deribit/: crypto_stress_test_demo.ipynb  stress_test.ipynb
research/regime/: plot_signals.py  regime_backtest.py  signals_2026.html
research/vol_surface/: fit_eth_svi.py
